clean travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,14 @@
 sudo: required
 
-branches:
-  only:
-    - master
-
-matrix:
+jobs:
   include:
-    - dist: trusty
-      language: python
-      services:
-        - docker
-      script:
-        - ./make/manylinux1/build_wheels.sh
-    - os: osx
-      osx_image: xcode8.3
-      script:
-        - ./make/osx/build_wheels.sh
-
-install:
-  - if [ "${TRAVIS_OS_NAME:-}" == "osx" ]; then ./make/osx/install_python.sh; fi
+  - install: skip
+    services:
+    - docker
+    script:
+    - ./make/manylinux1/build_wheels.sh
+  - os: osx
+    install:
+    - ./make/osx/install_python.sh
+    script:
+    - ./make/osx/build_wheels.sh
